COD-101:  fix: correct CSS styling and layout issues

--- a/styles.css
+++ b/styles.css
@@ -1,213 +1,254 @@
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  font-family: "Space Grotesk", sans-serif;
-  font-optical-sizing: auto;
+:root {
+  --input-border-gradient-start: #6448fe;
+  --input-border-gradient-end: #600594;
+  --input-error: #ff5252;
+  --white: #ffffff;
+  --light-grayish-violet: #dedddf;
+  --dark-grayish-violet: #8e8593;
+  --very-dark-violet: #21092f;
 }
+
+body {
+  margin: 0 auto;
+  font-family: 'Space Grotesk', sans-serif;
+  overflow: hidden;
+}
+
 main {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  height: 100%;
 }
-#bg-img {
+
+#background-image {
   height: 100%;
 }
 
-section:nth-child(2) {
-  margin-top: -200px;
+.form-wrapper {
+  margin-top: -9.375rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 200px;
+  margin-left: 12.5rem;
 }
+
 form {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 20px;
-  max-width: 400px;
+  gap: 1.25rem;
+  max-width: 25rem;
   margin: auto;
 }
+
 .success-message {
-  color: rgba(0, 0, 0, 0.812);
+  color: var(--very-dark-violet);
   font-weight: bold;
   margin: auto;
   text-align: center;
 }
+
 .success-message > h2 {
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 0.125rem;
 }
+
 .success-message > p {
-  color: rgba(0, 0, 0, 0.191);
+  color: var(--very-dark-violet);
 }
+
 .card-back,
 .card-front {
   position: absolute;
   width: 27rem;
-  height: 13rem;
-  background-position: center;
+  height: 14rem;
   background-size: cover;
-  border-radius: 10px;
-  color: #ffffffd4;
+  border-radius: 0.625rem;
+  color: var(--white);
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 0.125rem;
   font-weight: bold;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 0.125rem 0.125rem 0.25rem #000000;
+  overflow: hidden;
 }
+
 .card-front {
   left: 14rem;
   top: 10rem;
-  background-image: url("./images/bg-card-front.png");
+  background-image: url('./images/bg-card-front.png');
 }
+
 .card-back {
   left: 20rem;
   top: 25rem;
-  background-image: url("./images/bg-card-back.png");
+  background-image: url('./images/bg-card-back.png');
 }
+
 .card-front > img {
-  padding: 20px;
-  width: 60px;
+  padding: 1.25rem;
+  width: 3.75rem;
 }
-.card-cont1 {
+
+.card-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.card-cont2 {
+
+.name-date-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: -10px;
+  margin-top: -0.625rem;
 }
+
 .card-name-surname {
-  margin-left: 30px;
+  margin-left: 1.875rem;
 }
+
 .card-exp-date {
-  margin-right: 30px;
+  margin-right: 1.875rem;
 }
+
 .card-numbers {
   text-align: center;
-  letter-spacing: 5px;
-  font-size: 25px;
+  letter-spacing: 0.325rem;
+  font-size: 1.575rem;
 }
+
 .card-cvc {
   position: absolute;
-  right: 50px;
-  top: 77px;
+  right: 3.125rem;
+  top: 5.5rem;
 }
+
 input {
-  border-radius: 5px;
+  border-radius: 0.325rem;
   border: 0.03em solid black;
-  padding: 10px;
-  height: 20px;
+  padding: 0.625rem;
+  height: 1.25rem;
 }
+
 input:focus {
   -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
   outline: none;
-  padding: 5px;
-  margin: 5px 1px 3px 0px;
-  box-shadow: 0 0 5px rgb(178, 81, 238);
-  border: 1px solid rgb(199, 81, 238);
+  padding: 0.325rem;
+  margin: 0.325rem 0.075rem 0.195rem 0;
+  box-shadow: 0 0 0.325rem var(--input-border-gradient-start);
+  border: 0.075rem solid var(--input-border-gradient-end);
 }
+
 #cvcErrorMsg,
 #expDateErrorMsg,
 #cvcErrorMsg {
-  margin-top: 10px;
+  margin-top: 0.625rem;
 }
+
 small {
   display: none;
-  color: hsl(0, 100%, 66%);
-  margin-top: -15px;
+  color: var(--input-error);
+  margin-top: -0.95rem;
   font-weight: bold;
   text-transform: lowercase;
 }
+
 input.fail {
-  border: 1px solid hsl(0, 100%, 66%);
+  border: 1px solid var(--input-error);
 }
+
 #cardholderName,
 #cardNumber {
-  margin-top: -7px;
+  margin-top: -0.45rem;
   overflow: hidden;
 }
+
 #expMonth,
 #expYear {
-  width: 30px;
-  padding: 10px;
+  width: 1.875rem;
+  padding: 0.625rem;
 }
-.date-group {
+
+.date-cvc-wrapper {
   display: flex;
   width: 100%;
 }
-.date-group > div {
-  padding: 10px;
+
+.date-cvc-wrapper > div {
+  padding: 0.625rem;
 }
+
 #cvc,
 #expMonth,
 #expYear {
-  margin-top: 7px;
+  margin-top: 0.45rem;
 }
+
 button {
-  height: 40px;
-  background-color: hsl(278, 68%, 11%);
-  color: aliceblue;
+  height: 2.5rem;
+  background-color: var(--very-dark-violet);
+  color: var(--white);
   border: none;
-  border-radius: 10px;
-  margin-top: 10px;
+  border-radius: 0.625rem;
+  margin-top: 0.625rem;
   width: 100%;
   cursor: pointer;
 }
+
 label {
   text-transform: uppercase;
-  letter-spacing: 1px;
-  margin-left: 5px;
-  font-size: 12px;
+  letter-spacing: 0.075rem;
+  margin-left: 0.325rem;
+  font-size: 0.75rem;
 }
 
 @media screen and (max-width: 1300px) {
+  body {
+    overflow: hidden;
+  }
+
   main {
     display: grid;
     grid-template-columns: 1fr;
   }
-  section:nth-child(2) {
-    margin-top: 80px;
+
+  .form-wrapper {
+    margin-top: 5rem;
     margin-left: 0;
     text-align: center;
   }
 
   .card-front,
   .card-back {
-    margin-bottom: 20px;
-    width: 22rem;
-    height: 13rem;
+    margin-bottom: 1.25rem;
+    width: 21rem;
+    height: 12rem;
     background-position: center;
-    background-size: fill;
   }
+
   .card-front {
     z-index: 1;
-    left: 20px;
-    top: 20px;
+    left: 1.25rem;
+    top: 1.25rem;
   }
+
   .card-back {
-    left: 27px;
-    top: 150px;
+    left: 1.375rem;
+    top: 9rem;
   }
 
   form {
     max-width: 100%;
   }
-  #bg-img {
-    height: 300px;
+
+  #background-image {
+    height: 18.75rem;
     width: 100%;
   }
-  .card-cont1 {
-    font-size: 13px;
+
+  .card-wrapper {
+    font-size: 0.825rem;
   }
+
   .card-numbers {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 }
